<resources>
    <string name="app_name">Maعana</string>
    <string name="fireBaseUrl">https://sngvsimplechatapp.firebaseIO.com</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Hello_MSG">Message</string>

    <!-- UMS authentication -->
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in">Login</string>

    <string name="prompt_email">enter your email</string>
    <string name="prompt_password">enter your password</string>
    <string name="prompt_repassword">repeat your password</string>

    <string name="email_required">email field is required</string>
    <string name="password_required">password field is required</string>
    <string name="repassword_required">repassword field is required</string>

    <string name="invalid_password">Password is too short</string>
    <string name="repassword_doesnot_match">repassword doesn\'t match password</string>
    <string name="password_is_incorrect">check your password</string>

    <string name="email_invalid">This email address is invalid</string>
    <string name="user_not_exist">user email doesn\'t exist</string>
    <string name="email_alreay_exist">email already exist</string>
    <string name="prompt_username">enter your name</string>
    <string name="telephone_is_required">telephone number is required</string>
    <string name="action_complete_userDomain">complete</string>
    <string name="invalid_telephone_number">phone number invalid</string>
    <string name="name_is_required">name is required</string>

    <string name="title_list_freind">Friend</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="title_home">Home</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_user_domain">User Info</string>

    <string name="userProfile_phone">enter your phone number</string>
    <string name="userProfile_name">enter your name</string>
    <string name="title_activity_find_freind">FindFreind</string>
    <string name="findFreind_phoneNumber">enter phone number</string>
    <string name="title_activity_freind_list">FreindList</string>
    <string name="title_activity_welcome">maعana</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

</resources>
