<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="my.chatapplication.View.SignUpUserInfo"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/userDomain_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/userDomain_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="50dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">


        <ScrollView
            android:id="@+id/userDomain_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userDomain_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/textHint"
                    android:textColor="@color/textColor" />



                <EditText
                    android:id="@+id/userDomain_telephone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/prompt_telephone"
                    android:imeActionLabel="@string/action_sign_up"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/textHint"
                    android:textColor="@color/textColor" />

                <Button
                    android:layout_gravity="center"
                    android:gravity="center_vertical|center_horizontal"
                    android:id="@+id/userDomain_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_complete_userDomain"
                    android:textStyle="bold"
                    android:textColor="@color/buttonTextColor"
                    android:background="@color/buttonColor" />
            </LinearLayout>


        </ScrollView>
    </LinearLayout>

</LinearLayout>
